--- a/style.css
+++ b/style.css
@@ -52,14 +52,16 @@ input[type=text]:focus {
   background-color: #3bc47c;
 }
 #now-playing {
+  margin-top: 10px;
   font-size: 25px;
   text-align: center;
+  color: wheat;
 }
 #game-board {
   display: none;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
-  margin: 40px auto;
+  margin: 25px auto;
   width: 500px;
   height: auto;
   box-sizing: border-box;
@@ -81,7 +83,7 @@ input[type=text]:focus {
     font-size: 25px;
   }
   #game-board {
-    width: 80%;
+    width: 80vw;
   }
   .cells {
     height: 16vh;
