--- a/style.css
+++ b/style.css
@@ -69,8 +69,15 @@ input[type=text]:focus {
   border: 1px solid cyan;
 }
 .cells {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 160px;
   border: 1px solid cyan;
+  text-align: center;
+  font-size: 60px;
+  font-weight: bold;
+  color: cyan;
 }
 .cells:hover {
   background-color: #89ffff;
@@ -79,7 +86,7 @@ input[type=text]:focus {
 }
 .cells:active {
   background-color: black;
-  color: cyan;
+  color: white;
 }
 @media screen and (max-width: 600px) {
   #heading {
