--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ input[type=text]:focus {
   border: 1px solid cyan;
 }
 .cells {
+  user-select: none;
   display: flex;
   justify-content: center;
   align-items: center;
