--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ input[type=text] {
   background-color: #59cdca;
   outline: none;
   padding: 5px;
+  padding-left: 10px;
   border-radius: 400px;
 }
 input[type=text]:focus {
