place move on board
instead of writing in html
The board object is altered and then the board is rendered on click

--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ input[type=text]:focus {
   background-color: #59CD90;
   border: none;
   border-radius: 10px;
+  overflow-x: visible;
 }
 #start:hover {
   font-weight: bold;
