--- a/style.css
+++ b/style.css
@@ -15,14 +15,36 @@ body {
   text-align: center;
   font-size: 40px;
 }
-#get-player {
-  margin-top: 30px;
+.gameBtn {
+  width: 150px;
+  padding: 15px;
+  font-size: 20px;
+  border: none;
+  border-radius: 10px;
+}
+#game-mode {
+  margin-top: 40px;
   display: flex;
+  justify-content: space-evenly;
+  
+}
+#vs-player, #vs-pc {
+  background-color: #14ff8a;
+}
+#vs-player:hover, #vs-pc:hover {
+  font-weight: bold;
+}
+#get-player, #get-x {
+  display: none;
+  margin-top: 30px;
   flex-direction: column;
   text-align: center;
   font-size: 20px;
   color: #59CD90;
   align-items: center;
+}
+#cp {
+  color: cyan;
 }
 #player-1 {
   margin-left: 4px;
@@ -39,15 +61,9 @@ input[type=text] {
 input[type=text]:focus {
   background-color: #3bc47c;
 }
-#start {
+#start-pvp, #start-pvc  {
   margin-top: 10px;
-  width: 150px;
-  padding: 10px;
-  font-size: 20px;
   background-color: #59CD90;
-  border: none;
-  border-radius: 10px;
-  overflow-x: visible;
 }
 #start:hover {
   font-weight: bold;
